fix wrapping of tags with no white space (issue #2201)

--- a/src/renderer/assets/styles/components/tags.scss
+++ b/src/renderer/assets/styles/components/tags.scss
@@ -29,6 +29,9 @@
     align-items: center;
     text-decoration: none!important;
     color: var(--color-blue)!important;
+    word-break: break-all;
+    white-space: normal;
+
 
     &:visited {
       color: var(--color-blue);
